--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -2,7 +2,7 @@ CXX_STD = CXX11
 
 # Workaround for bug with unixODBC 2.3.1
 # https://github.com/lexicalunit/nanodbc/issues/149
-PKG_CXXFLAGS=-I. -DNANODBC_USE_BOOST_CONVERT -DNANODBC_ODBC_VERSION=SQL_OV_ODBC3 @PKG_CXXFLAGS@
+PKG_CXXFLAGS=-I. -DNANODBC_USE_BOOST_CONVERT -DNANODBC_ODBC_VERSION=SQL_OV_ODBC3 @PKG_CXXFLAGS@ -DHAS_REMOTE_API=0
 PKG_LIBS=@PKG_LIBS@
 
 all: clean
