--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -5,7 +5,7 @@ CXX_STD = CXX11
 PKG_CXXFLAGS=-I. -DNANODBC_USE_BOOST_CONVERT -DNANODBC_ODBC_VERSION=SQL_OV_ODBC3 $(CXX1XPICFLAGS) @PKG_CXXFLAGS@ -Icctz/include -Inanodbc
 PKG_LIBS=@PKG_LIBS@ -Lcctz -lcctz
 
-OBJECTS = connection.o nanodbc.o result.o odbc_connection.o RcppExports.o
+OBJECTS = connection.o nanodbc.o result.o odbc_connection.o RcppExports.o Iconv.o
 
 all: $(SHLIB)
 
