Add support for differential BigInt mappings
Fixes #90

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(odbcListDrivers)
 export(odbcListObjectTypes)
 export(odbcListObjects)
 export(odbcPreviewObject)
+export(odbcSetBigIntMapping)
 export(odbcSetTransactionIsolationLevel)
 exportClasses(OdbcConnection)
 exportClasses(OdbcDriver)
