Add an S4 Class representing SQLTables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ S3method(odbcDataType,default)
 S3method(odbcListObjectTypes,default)
 S3method(odbcListObjects,OdbcConnection)
 S3method(odbcPreviewObject,OdbcConnection)
+export(SQLTable)
 export(dbUnQuoteIdentifier)
 export(odbc)
 export(odbcConnectionActions)
